fixing bill upload page width on mobile

--- a/app/assets/stylesheets/bills.scss
+++ b/app/assets/stylesheets/bills.scss
@@ -118,7 +118,11 @@
   }
 
   .highlights-block{
-  width:100%;
+    width:100%;
+  }
+
+  .bill-select-btn-block{
+    width:80%;
   }
 
 }
